fixtures/cell_env/invalid/02_unknown_flow_reference.sea
Cell "BadFlow"
    @profile "python-agent-v1"

NetworkFlow "dangling" from "BadFlow" to "nowhere"
